@@ -1,3 +1,8 @@
+2009-11-14  6.5.7-8 Cristy  <quetzlzacatenango@image...>
+  * Add forwardFourierTransform(), inverseFourierTransform(), and
+    inverseFourierTransformImage() methods to implement forward and inverse
+    discrete Fourier transform (DFT / IFT).
+
 2009-09-28  6.5.6-6 Cristy  <quetzlzacatenango@image...>
   * Add splice() method to splice the background color into the image.
 
